removed sass cache

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 <body>
     <div class="booking">
         <form>
-            <div class="controls third">
+            <div class="controls fourth">
                 <input type="date" id="arrive" class="floatLabel" name="arrive" value="<?php echo date('Y-m-d'); ?>">
                 <label for="arrive" class="label-date"><i class="fa fa-calendar"></i>&nbsp;&nbsp;Check In</label>
             </div>  
 
-            <div class="controls third">
+            <div class="controls fourth">
                 <input type="date" id="arrive" class="floatLabel" name="arrive" value="<?php echo date('Y-m-d'); ?>">
                 <label for="arrive" class="label-date"><i class="fa fa-calendar"></i>&nbsp;&nbsp;Check Out</label>
             </div>
@@ -76,7 +76,8 @@
                 </select>
                 <label for="fruit">Rooms</label>
             </div> 
-            <button class = "pure-button flat white">Book Now</button>
+            <button class = "pure-button flat green">Book Now</button>
+            
         </form> 
     </div>
     <div class = "hidden-menu">
