--- a/index.html
+++ b/index.html
@@ -100,6 +100,13 @@
             </a>
         </div>
 
+        <div class = "menu-desktop">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Accommodations</a></li>
+                <li><a href="#">Amenities</a></li>
+                <li><a href="#">Gallery</a></li>
+                <li><a href="#">Contact Us</a></li>
+        </div>
         <a class="pure-menu-heading menu-link" id = "menu-open" href="javascript:void(0)">
             <span></span>
             <span></span>
