--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         
     <div class = "fog">
         <div class="splash-container">
-            
+            <div class = "before"></div>
             <img class = "splash-logo" src = "static/img/xxx.png">
 
             <div class="splash">
@@ -131,6 +131,7 @@
                 Discover
                 <div class = "arrow bounce"></div>
             </a>
+            <div class = "after"></div>
         </div>
 
         <div class="content-wrapper" id = "content">
